--- a/app/index.ejs
+++ b/app/index.ejs
@@ -1,6 +1,6 @@
 <head>
-    <script src = 'app.js'></script>
 </head>
 <body>
-    Hello, World!
+    <div id = "app"></div>
+    <script src = 'app.js'></script>
 </body>
