--- a/app/index.ejs
+++ b/app/index.ejs
@@ -1,6 +1,11 @@
 <head>
+    <link href="bower_components/skeleton/css/skeleton.css" rel="stylesheet">
+    <link href="bower_components/skeleton/css/normalize.css" rel="stylesheet">
+    <link href="/styles.css" rel="stylesheet">
 </head>
 <body>
-    <div id = "app"></div>
+    <div class="container">
+        <div id = "app"></div>
+    </div>
     <script src = 'app.js'></script>
 </body>
